# CPP-CLI-Task-Tracker

./: .gitignore  CMakeLists.txt  README.md
include/: json_task_storage.h  task-cli.h  task.h  task_cli.h  task_manager.h
src/: json_task_storage.cpp  task-cli.cpp  task.cpp  task_cli.cpp  task_manager.cpp
tests/: test_task_cli.py
